adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus distinctio quod quia porro iure perferendis officia, enim magnam doloribus officiis libero consectetur suscipit dolorem velit rerum maxime aspernatur soluta voluptas! </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ipsum pariatur ratione ullam fuga tenetur molestias cumque, nemo, expedita earum unde harum animi at amet vitae laboriosam, maiores itaque nam.</p>
 </body>
 </html>
